force-app/main/default/objects/Account/fields/Merchant_Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Activity_Level__c</fullName>
    <formula>IF (AND(TODAY() -  Modification_Date__c &gt; 14, TODAY() - Modification_Date__c &lt;= 90),&apos;Walking Dead&apos;,
IF (TODAY() - Modification_Date__c &gt; 90, &apos;Dead&apos;,
IF (TODAY() - Modification_Date__c &lt;= 14,&apos;Active&apos;,&apos;No activity&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Activity Level</label>
    <type>Text</type>
</CustomField>