force-app/main/default/objects/Account/fields/Merchant_count__c.field-meta.xml
<CustomField>
    <fullName>Merchant_count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>