force-app/main/default/objects/Account/fields/Merchant_Information__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Information</label>
    <type>Checkbox</type>
</CustomField>