force-app/main/default/objects/Account/fields/Micro_Seller__c.field-meta.xml
<CustomField>
    <fullName>Micro_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Micro-Seller</label>
    <type>Checkbox</type>
</CustomField>