force-app/main/default/objects/Account/fields/Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Date__c</fullName>
    <formula>DATE(1900, 01, 01) +
MAX(
BLANKVALUE(Last_activty_date__c, DATE(4000, 12, 31)) -
DATE(1900, 01, 01),

BLANKVALUE((DATEVALUE(LastModifiedDate)), DATE(4000, 12, 31)) -
DATE(1900, 01, 01)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modification Date</label>
    <type>Date</type>
</CustomField>