force-app/main/default/objects/Account/fields/Monthly_churn__c.field-meta.xml
<CustomField>
    <fullName>Monthly_churn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filled by process builder performance data</description>
    <label>Monthly churn</label>
    <type>Checkbox</type>
</CustomField>