force-app/main/default/objects/Account/fields/Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fees__c</fullName>
    <label>Monthly Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>