force-app/main/default/objects/Account/fields/NB_Lead_Pool_to_contact__c.field-meta.xml
<CustomField>
    <fullName>NB_Lead_Pool_to_contact__c</fullName>
    <label>NB Lead Pool to contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>