force-app/main/default/objects/Account/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To know whether we are under NDA with a client/partner or not</inlineHelpText>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>