force-app/main/default/objects/Account/fields/New_BizDev_Kanban_Substage__c.field-meta.xml
<CustomField>
    <fullName>New_BizDev_Kanban_Substage__c</fullName>
    <label>New BizDev Kanban Substage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_BizDev_Kanban_Stages</valueSetName>
    </valueSet>
</CustomField>