force-app/main/default/objects/Account/fields/NMO_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>NMO_Process_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Launching Phase Process ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>