force-app/main/default/objects/Account/fields/Number_Join_back_care__c.field-meta.xml
<CustomField>
    <fullName>Number_Join_back_care__c</fullName>
    <label>Number Join back care</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Back_Care__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>