force-app/main/default/objects/Account/fields/Number_of_Back_Watch_granted_NMO__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Back_Watch_granted_NMO__c</fullName>
    <description>Count the number of Launching Phase with Back Watch Granted</description>
    <label>Number of Back Watch granted LP</label>
    <summaryFilterItems>
        <field>NMO_Process__c.Back_Watch_Granted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>NMO_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>