force-app/main/default/objects/Account/fields/Number_of_ended_NMO_processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ended_NMO_processes__c</fullName>
    <description>Count of the number of N.M.O. Process Records related to the Merchant which has reached its final step.</description>
    <label>Number of ended Launching Phases</label>
    <summaryFilterItems>
        <field>NMO_Process__c.Stage__c</field>
        <operation>equals</operation>
        <value>Saved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NMO_Process__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>NMO EU buyback</value>
    </summaryFilterItems>
    <summaryForeignKey>NMO_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>