force-app/main/default/objects/Account/fields/Number_of_ended_onboarding_processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ended_onboarding_processes__c</fullName>
    <description>Count of the number of Onboarding Process Records related to the Merchant which has reached its final step.</description>
    <label>Number of ended Onboarding Processes</label>
    <summaryFilterItems>
        <field>Onboarding_Process__c.Stage__c</field>
        <operation>equals</operation>
        <value>Go-Live Prerequisites</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Onboarding_Process__c.Go_Live_granted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Onboarding_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>