force-app/main/default/objects/Account/fields/Number_of_Exit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exit__c</fullName>
    <label>Number of Exit</label>
    <summaryFilterItems>
        <field>Merchant_Special_Process__c.TECH_Special_Process_Type_Copy__c</field>
        <operation>equals</operation>
        <value>Exit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Merchant_Special_Process__c.Stage__c</field>
        <operation>equals</operation>
        <value>In Progress, Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Special_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>