force-app/main/default/objects/Account/fields/Number_of_Live_buyback_Targeted_country__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Live_buyback_Targeted_country__c</fullName>
    <label>Number of Live buyback Targeted country</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Buyback_Live_Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>