force-app/main/default/objects/Account/fields/Number_of_Live_Paypal_Targeted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Live_Paypal_Targeted_Countries__c</fullName>
    <label>Number of Live Paypal Targeted Countries</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Paypal_Score_Stage__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>