force-app/main/default/objects/Account/fields/Number_of_Live_Targeted_Countries_by_API__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Live_Targeted_Countries_by_API__c</fullName>
    <description>to automate Merchant in NMO/RUN without previous steps</description>
    <label>Number of Live Targeted Countries by API</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Online_Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Targeted_Country__c.Force__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>