force-app/main/default/objects/Account/fields/Number_of_NMO_processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NMO_processes__c</fullName>
    <description>Count of the number of Launching Phase Records related to the Merchant.</description>
    <label>Number of Launching Phases</label>
    <summaryForeignKey>NMO_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>