force-app/main/default/objects/Account/fields/Number_of_onboarding_processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_onboarding_processes__c</fullName>
    <description>Count of the number of Onboarding Process Records related to the Merchant.</description>
    <label>Number of Ongoing Onboarding Processes</label>
    <summaryFilterItems>
        <field>Onboarding_Process__c.Abandonned__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Onboarding_Process__c.Go_Live_granted__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Onboarding_Process__c.Stage__c</field>
        <operation>notEqual</operation>
        <value>Failed,Completed,Abandonned</value>
    </summaryFilterItems>
    <summaryForeignKey>Onboarding_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>