force-app/main/default/objects/Account/fields/Number_of_Ongoing_MSP__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ongoing_MSP__c</fullName>
    <label>Number of Ongoing MSP</label>
    <summaryFilterItems>
        <field>Merchant_Special_Process__c.Stage__c</field>
        <operation>equals</operation>
        <value>Pre-Exit Phase, Ongoing Notice Period</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Special_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>