force-app/main/default/objects/Account/fields/Number_of_Ongoing_NMO_processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ongoing_NMO_processes__c</fullName>
    <label>Number of Ongoing Launching Phases</label>
    <summaryFilterItems>
        <field>NMO_Process__c.Unlimited_granted__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NMO_Process__c.NMO_Failed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NMO_Process__c.NMO_Success__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NMO_Process__c.NMO_Success__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NMO_Process__c.Stage__c</field>
        <operation>notEqual</operation>
        <value>Saved, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>NMO_Process__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>