force-app/main/default/objects/Account/fields/Number_of_SKU__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SKU__c</fullName>
    <label># of S.K.U.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-9</fullName>
            </value>
            <value>
                <fullName>10-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>