force-app/main/default/objects/Account/fields/Number_of_Targeted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Targeted_Countries__c</fullName>
    <label>Number of Targeted Countries</label>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>