force-app/main/default/objects/Account/fields/Old_BizDev_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_BizDev_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old BizDev Value</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants7</relationshipName>
    <type>Lookup</type>
</CustomField>