force-app/main/default/objects/Account/fields/OLD_Diversification_Tag__c.field-meta.xml
<CustomField>
    <fullName>OLD_Diversification_Tag__c</fullName>
    <label>OLD_Diversification Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Core Electronics</fullName>
            </value>
            <value>
                <fullName>Other Diversification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>