force-app/main/default/objects/Account/fields/Old_Last_Daily_Biz_Perf_Listings__c.field-meta.xml
<CustomField>
    <fullName>Old_Last_Daily_Biz_Perf_Listings__c</fullName>
    <label>Old Last Daily Biz Perf Listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>