force-app/main/default/objects/Account/fields/Onboarder__c.field-meta.xml
<CustomField>
    <fullName>Onboarder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A person that will be in charge to support the merchant during the Onboarding process.</inlineHelpText>
    <label>Activation Specialist (Onb)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants5</relationshipName>
    <type>Lookup</type>
</CustomField>