force-app/main/default/objects/Account/fields/Onboarding_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Process_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>----</inlineHelpText>
    <label>Onboarding Process ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>