force-app/main/default/objects/Account/fields/Oney_ES__c.field-meta.xml
<CustomField>
    <fullName>Oney_ES__c</fullName>
    <label>Oney ES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paypal_Score_Stages</valueSetName>
    </valueSet>
</CustomField>