force-app/main/default/objects/Account/fields/Ongoing_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Alerts__c</fullName>
    <label>Ongoing Alerts</label>
    <summaryFilterItems>
        <field>Alert__c.Stage__c</field>
        <operation>equals</operation>
        <value>Monitoring Period, Last Chance, Not compliant</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Business_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>