force-app/main/default/objects/Account/fields/OSS_Registered__c.field-meta.xml
<CustomField>
    <fullName>OSS_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSS Registered</label>
    <type>Checkbox</type>
</CustomField>