force-app/main/default/objects/Account/fields/Other_Diagnostic_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Other_Diagnostic_Software_Used__c</fullName>
    <label>Other Diagnostic Software Used</label>
    <type>TextArea</type>
</CustomField>