force-app/main/default/objects/Account/fields/Other_Integration_s_Solution_s_Used__c.field-meta.xml
<CustomField>
    <fullName>Other_Integration_s_Solution_s_Used__c</fullName>
    <inlineHelpText>Add the details about the integrators used.</inlineHelpText>
    <label>Other Integration(s)/Solution(s) Used</label>
    <type>TextArea</type>
</CustomField>