force-app/main/default/objects/Account/fields/Parent_Merchant_PK__c.field-meta.xml
<CustomField>
    <fullName>Parent_Merchant_PK__c</fullName>
    <formula>IF(AND(ISBLANK( ParentId ), RecordType.DeveloperName =&quot;U_S&quot;), TEXT(Back_Office_PK__c)&amp;&quot;US&quot; ,
IF(ISBLANK( ParentId ),TEXT(Back_Office_PK__c),
IF( Parent.RecordType.DeveloperName =&quot;U_S&quot;, TEXT(Parent.Back_Office_PK__c) &amp;&quot;US&quot;, TEXT(Parent.Back_Office_PK__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Merchant PK</label>
    <type>Text</type>
</CustomField>