force-app/main/default/objects/Account/fields/Paypal_Score__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Score__c</fullName>
    <formula>IF ( ISPICKVAL ( Stage__c,  &apos;Offline&apos;), 
     0, 
     Number_of_Live_Paypal_Targeted_Countries__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Live Paypal Targeted Countries divided by the total number of Targeted Countries for this Merchant if it&apos;s Online. Otherwise, zero.</inlineHelpText>
    <label>Paypal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>