force-app/main/default/objects/Account/fields/Previous_BizDev__c.field-meta.xml
<CustomField>
    <fullName>Previous_BizDev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants</relationshipName>
    <type>Lookup</type>
</CustomField>