force-app/main/default/objects/Account/fields/Prioritization_Score__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Score__c</fullName>
    <description>Prioritization score used by the Business Development team to prioritize actions.</description>
    <inlineHelpText>Prioritization score used by the Business Development team to prioritize actions.</inlineHelpText>
    <label>Ops Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>