force-app/main/default/objects/Account/fields/Prioritization_Score_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Score_Feedback__c</fullName>
    <label>Feedback NB Event</label>
    <type>TextArea</type>
</CustomField>