force-app/main/default/objects/Account/fields/Prioritization_Tag__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Tag__c</fullName>
    <label>Prioritization Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amazon Renewed - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Audio Event - Q2 2021</fullName>
            </value>
            <value>
                <fullName>BM It&apos;s in the Game - Q4 2021</fullName>
            </value>
            <value>
                <fullName>Call Me Maybe - Q3 2021</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Co Event - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Grow - Q3 2021</fullName>
            </value>
            <value>
                <fullName>MacPlugger - Q3 2021</fullName>
            </value>
            <value>
                <fullName>MDA - Fill my house - Q4 2021</fullName>
            </value>
            <value>
                <fullName>Operation Amazon Renewed - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Operation Dynamo - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Operation Grand Theft - Q3 2021</fullName>
            </value>
            <value>
                <fullName>Operation Replug of the Living Dead - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Operation Return of the Mac - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Operation SBB - Q3 2021</fullName>
            </value>
            <value>
                <fullName>P0</fullName>
                <isActive>false</isActive>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <isActive>false</isActive>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <isActive>false</isActive>
                <label>P2</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <isActive>false</isActive>
                <label>P3</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <isActive>false</isActive>
                <label>P4</label>
            </value>
            <value>
                <fullName>PO</fullName>
                <isActive>false</isActive>
                <label>PO</label>
            </value>
            <value>
                <fullName>Say cheeese - Q4 2021</fullName>
            </value>
            <value>
                <fullName>Short-Term Action</fullName>
                <isActive>false</isActive>
                <label>Short-Term Action</label>
            </value>
            <value>
                <fullName>Small Appliances Event - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Tier 1 Event - Q2 2021</fullName>
            </value>
            <value>
                <fullName>Tools &amp; Gardening Event - Q2 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>