force-app/main/default/objects/Account/fields/Product_cluster__c.field-meta.xml
<CustomField>
    <fullName>Product_cluster__c</fullName>
    <label>Product cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Cluster</valueSetName>
    </valueSet>
</CustomField>