force-app/main/default/objects/Account/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <inlineHelpText>This field is mandatory to move from Identification to first contact!</inlineHelpText>
    <label>Type of company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_company_Picklist</valueSetName>
    </valueSet>
</CustomField>