force-app/main/default/objects/Account/fields/Qualification_Form_completed__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Form_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification Form completed</label>
    <type>Checkbox</type>
</CustomField>