force-app/main/default/objects/Account/fields/Quality_Alert__c.field-meta.xml
<CustomField>
    <fullName>Quality_Alert__c</fullName>
    <formula>if( TECH_Defective__c = TRUE, TRUE , if(  TECH_Late_responses__c  = TRUE, TRUE ,if(  TECH_CSAT__c  = TRUE, TRUE ,if(  TECH_Wrong__c  = TRUE, TRUE ,if(  TECH_Accessories__c  = TRUE, TRUE ,if(  TECH_Cancellation__c  = TRUE, TRUE , FALSE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Alert</label>
    <type>Checkbox</type>
</CustomField>