force-app/main/default/objects/Account/fields/Quality_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_contact__c</fullName>
    <inlineHelpText>Field populated for Lead Prio Score
- Direct Contact: First Name OR Last Name AND Email OR Phone/Mobile
- Contact: ONLY First Name OR Last Name
- Generic Contact: Email OR Phone/Mobile of Team Contact
- No Contact: No data about contact details</inlineHelpText>
    <label>Contact Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct contact</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Generic contact</fullName>
            </value>
            <value>
                <fullName>No contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>