force-app/main/default/objects/Account/fields/Quarterly_Churn__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Churn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Churn</label>
    <type>Checkbox</type>
</CustomField>