force-app/main/default/objects/Account/fields/R2_Certified__c.field-meta.xml
<CustomField>
    <fullName>R2_Certified__c</fullName>
    <label>R2 Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>