force-app/main/default/objects/Account/fields/Reached_100_Sales_on__c.field-meta.xml
<CustomField>
    <fullName>Reached_100_Sales_on__c</fullName>
    <label>Reached 100 Sales on</label>
    <type>Date</type>
</CustomField>