force-app/main/default/objects/Account/fields/Reached_180_Sales_on__c.field-meta.xml
<CustomField>
    <fullName>Reached_180_Sales_on__c</fullName>
    <label>Reached 180 Sales on</label>
    <type>Date</type>
</CustomField>