force-app/main/default/objects/Account/fields/Reached_50_sales_on__c.field-meta.xml
<CustomField>
    <fullName>Reached_50_sales_on__c</fullName>
    <label>Reached 50 sales on</label>
    <type>Date</type>
</CustomField>