force-app/main/default/objects/Account/fields/Ready_Targeted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Ready_Targeted_Countries__c</fullName>
    <label>Ready Targeted Countries</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Online_Status__c</field>
        <operation>equals</operation>
        <value>Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>