force-app/main/default/objects/Account/fields/Reason_for_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Back_Care__c</fullName>
    <label>Reason for Back Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>