force-app/main/default/objects/Account/fields/Reason_for_last_Sales_limitation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_last_Sales_limitation__c</fullName>
    <label>Reason for last Sales limitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_limitation</valueSetName>
    </valueSet>
</CustomField>