force-app/main/default/objects/Account/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <label>Referral Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phonecheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>