force-app/main/default/objects/Account/fields/Refurbed_Id__c.field-meta.xml
<CustomField>
    <fullName>Refurbed_Id__c</fullName>
    <label>Refurbed Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>