force-app/main/default/objects/Account/fields/Relevance_Date__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Date__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <label>Relevance Date</label>
    <type>Date</type>
</CustomField>