force-app/main/default/objects/Account/fields/representative_referral_code__c.field-meta.xml
<CustomField>
    <fullName>representative_referral_code__c</fullName>
    <label>Representative referral code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>