force-app/main/default/objects/Account/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <label>Return Address</label>
    <type>TextArea</type>
</CustomField>